--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "product-list-with-cart",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://skhosla8.github.io/product-list-with-cart",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -17,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
